[PE] Skip fragment clip for composited layers under multicol

For now we don't allow fragmentation of composited layers, so they
should skip fragment clips.

Bug: 839008
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I33f5ef3e246c0b9bdf1f3e70798e1fd793ea1b58
Reviewed-on: https://chromium-review.googlesource.com/1042997
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555982}
Former-commit-id: c7771da317c4afcd8a89d27d33f33dd6bfea492e